2006-12-27  Richard Frith-Macdoanld <rfm@gnu.org>

	* Headers/Additions/GNUstepGUI/GSTheme.h: Store images in dictionary.
	* Source/GSTheme.m: Improve handling of named images.
	* Source/NSButtonImageSource.[hm]: Partial implementation of classes
	to handle standard images in buttons (support theming etc).

2006-12-21  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSWindow.h
	Added missing delegate methods.
	* Source/NSResponder.m (-undoManager):
	Forward method to next responder.
	* Source/NSWindow.m (-undoManager):
	Try to get an undo manager from delegate or document.
	* Source/NSTextView.m
	(-shouldChangeTextInRange:replacementString:): Added basic support
	for undo.
	
2006-12-19  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSObjectController.h
	* Headers/AppKit/NSUserDefaultsController.h
	* Headers/AppKit/NSKeyValueBinding.h
	* Headers/AppKit/NSArrayController.h
	* Headers/AppKit/NSController.h
	* Source/NSObjectController.m
	* Source/NSUserDefaultsController.m
	* Source/NSArrayController.m
	* Source/NSController.m:
	New files added as basic support for controllers. 
	Mostly not implemented.
	* Source/GNUmakefile
	* Source/externs.m:
	Add these new classes and helper variables.

2006-12-18  Saso Kiselkov

	* Source/NSAlert.m: Left align long alert messages.

2006-12-11  Adam Fedor  <fedor@gnu.org>

	* Documentation/manual/: File and node name fixes.

2006-12-09  Mark Tracy <tracy454@concentric.net>
	
	* Source/NSBitmapImageRep.m: Autogsdoc comments

2006-12-08  Richard Frith-Macdoanld <rfm@gnu.org>

	* Source/NSInputManager.m:
	Use help function key to enter context help mode rather than
	inserting it into the text.

2006-12-06  Matt Rice  <ratmice@gmail.com>

	* Source/NSTextView.m: Don't update the selection when dragging a
	NSColorPboardType.

2006-12-03  Adam Fedor  <fedor@gnu.org>

	* Documentation/manual/: New AppKit manual.

2006-11-28  Mark Tracy <tracy454@concentric.net>