@@ -189,9 +189,17 @@ static NSColor	*txtCol;
 {
   if (_textfieldcell_draws_background)
     {
-      [_background_color set];
+      if ([self isEnabled])
+	{
+          [_background_color set];
+	}
+      else
+	{
+	  [[NSColor controlBackgroundColor] set];
+	}
       NSRectFill ([self drawingRectForBounds: cellFrame]);
     }
+
   [super drawInteriorWithFrame: cellFrame inView: controlView];
 }
 
